分支提交测试

--- a/src/main/webapp/pages/login.html
+++ b/src/main/webapp/pages/login.html
@@ -92,12 +92,12 @@
                 <div class="layui-form-item">
                     <button lay-filter="login-submit" class="layui-btn layui-btn-fluid" lay-submit>登 录</button>
                 </div>
-                <!--<div class="layui-form-item login-other">-->
-                    <!--<label>第三方登录</label>-->
-                    <!--<a href="javascript:;"><i class="layui-icon layui-icon-login-qq"></i></a>-->
-                    <!--<a href="javascript:;"><i class="layui-icon layui-icon-login-wechat"></i></a>-->
-                    <!--<a href="javascript:;"><i class="layui-icon layui-icon-login-weibo"></i></a>-->
-                <!--</div>-->
+                <div class="layui-form-item login-other">
+                    <label>第三方登录</label>
+                    <a href="javascript:;"><i class="layui-icon layui-icon-login-qq"></i></a>
+                    <a href="javascript:;"><i class="layui-icon layui-icon-login-wechat"></i></a>
+                    <a href="javascript:;"><i class="layui-icon layui-icon-login-weibo"></i></a>
+                </div>
             </form>
         </div>
     </div>
